fix rubocop warnings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,9 @@
 # TODO: remove this file by either moving cops here or fixing code
 inherit_from: .rubocop_todo.yml
 
+AllCops:
+  TargetRubyVersion: 2.0
+
 Rails:
   Enabled: true
 
@@ -29,3 +32,5 @@ Performance/FixedSize:
   Exclude:
     - 'test/**/*'
 
+Rails/HttpPositionalArguments:
+  Enabled: false
