--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -20,6 +20,9 @@ Metrics/CyclomaticComplexity:
 Metrics/LineLength:
   Max: 202
 
+Metrics/BlockLength:
+  Max: 30
+
 # Offense count: 1
 # Configuration parameters: EnforcedStyle, SupportedStyles.
 # SupportedStyles: strict, flexible
