--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prettier": "^1.13.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint -c .eslintrc webpack/"
   },
   "repository": {
     "type": "git",
