--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        foreman-core-branch: [1.21-stable, 1.22-stable, 1.23-stable, 1.24-stable, 2.0-stable, develop]
+        foreman-core-branch: [develop]
         ruby-version: [2.4, 2.5, 2.6]
         exclude:
           - foreman-core-branch: 2.0-stable
