--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -28,3 +28,10 @@ Rails/RakeEnvironment:
 Style/RegexpLiteral:
   Exclude:
     - 'config/routes.rb'
+
+# Offense count: 1
+# Configuration parameters: Include.
+# Include: **/*.gemspec
+Gemspec/RequiredRubyVersion:
+  Exclude:
+    - 'foreman_omaha.gemspec'
